@@ -940,48 +940,11 @@ void CGUIWindowVideoFiles::LoadPlayList(const CStdString& strPlayList)
       }
       return ; //hmmm unable to load playlist?
     }
-
-    // how many songs are in the new playlist
-    if (pPlayList->size() == 1)
-    {
-      // just 1 song? then play it (no need to have a playlist of 1 song)
-      CPlayList::CPlayListItem item = (*pPlayList)[0];
-      g_application.PlayFile(CFileItem(item));
-      return ;
-    }
-
-    // clear current playlist
-    g_playlistPlayer.GetPlaylist(PLAYLIST_VIDEO).Clear();
-
-    // add each item of the playlist to the playlistplayer
-    for (int i = 0; i < (int)pPlayList->size(); ++i)
-    {
-      const CPlayList::CPlayListItem& playListItem = (*pPlayList)[i];
-      CStdString strLabel = playListItem.GetDescription();
-      if (strLabel.size() == 0)
-        strLabel = CUtil::GetTitleFromPath(playListItem.GetFileName());
-
-      CPlayList::CPlayListItem playlistItem;
-      playlistItem.SetFileName(playListItem.GetFileName());
-      playlistItem.SetDescription(strLabel);
-      playlistItem.SetDuration(playListItem.GetDuration());
-      g_playlistPlayer.GetPlaylist( PLAYLIST_VIDEO ).Add(playlistItem);
-    }
   }
 
-  // if we got a playlist
-  if (g_playlistPlayer.GetPlaylist( PLAYLIST_VIDEO ).size() )
+  if (g_application.ProcessAndStartPlaylist(strPlayList, *pPlayList, PLAYLIST_VIDEO))
   {
-    // then get 1st song
-    CPlayList& playlist = g_playlistPlayer.GetPlaylist( PLAYLIST_VIDEO );
-    const CPlayList::CPlayListItem& item = playlist[0];
-
-    // and start playing it
-    g_playlistPlayer.SetCurrentPlaylist(PLAYLIST_VIDEO);
-    g_playlistPlayer.Reset();
-    g_playlistPlayer.Play(0);
-
-    // and activate the playlist window if its not activated yet
+    // activate the playlist window if its not activated yet
     if (GetID() == m_gWindowManager.GetActiveWindow())
     {
       m_gWindowManager.ActivateWindow(WINDOW_VIDEO_PLAYLIST);
